# chrono-mind

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  MILESTONES.md  README.md  TODO.md  tarpaulin-report.html  vectors.store
.github/workflows/: ci.yml
benches/: comparison.rs  concurrency.rs  external.rs  main.rs  quick_bench.rs  run_benchmarks.sh  run_quick_bench.sh  vector_ops.rs
benches/archive/: vector_ops_original.rs
benches/common/: mod.rs  simd.rs
benches/hnsw/: mod.rs
benches/memory/: mod.rs
benches/results/: analyze.rs
benches/temporal/: mod.rs
bindings/python/: .gitignore  Cargo.toml  ann_bench.py  pyproject.toml
bindings/python/results/: concurrency.md  glove-100-angular.md  nytimes-256-angular.md
bindings/python/src/: lib.rs
ci/: tsan-suppressions.txt
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARKS_STRUCTURE.md  CODE_REVIEW.md  DATA_FLOW.md  DESIGN.md  DEVELOPER_QUICKSTART.md  FUTURE_IMPROVEMENTS.md  HNSW.md  PERFORMANCE_ANALYSIS.md  QUANTUM_STRUCTURE.md  TESTS.md  USER_GUIDE.md
examples/: sample_vectors.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: index_ops.rs
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  metric.rs  persistence.rs  server.rs  store.rs  telemetry.rs  types.rs  utils.rs
src/core/: config.rs  error.rs  logging.rs  mod.rs
src/index/: arena.rs  lockfree_hnsw.rs  mod.rs  neighbors.rs  rwlock_hnsw.rs  sharded_rwlock.rs
src/memory/: mod.rs  temporal.rs  traits.rs  types.rs
src/storage/: config.rs  data_dir.rs  hnsw.rs  memory.rs  metrics.rs  mmap.rs  mod.rs  persistence.rs  temporal.rs
src/storage/hnsw/: candidate.rs  config.rs  insert.rs  mod.rs  node.rs  search.rs
src/utils/: mod.rs  monitoring.rs  validation.rs
tests/: cli_test.rs  loom.rs  performance_test.rs  persistence_test.rs  property_test.rs  recall_test.rs  reclamation_test.rs  store_test.rs  stress_test.rs
tests/integration/: hnsw_test.rs  logging_test.rs  mod.rs  monitoring_test.rs  persistence_count_test.rs  persistence_test.rs  simd_test.rs  storage_test.rs  temporal_import_test.rs  temporal_test.rs  validation_test.rs
tests/unit/: memory_storage_test.rs
tests/utils/: mod.rs
