[package]
name = "chronomind"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "A temporal vector store for AI agent memory, with time-aware similarity search"
authors = ["JtPerez-Acle <jtperez.acle@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JtPerez-Acle/chrono-mind"
readme = "README.md"
keywords = ["vector-store", "hnsw", "temporal", "memory", "ai"]
categories = ["data-structures", "database-implementations"]

[dependencies]
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
# Needed by the CLI binary to surface `tracing` logs; the library itself only emits spans.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "chronomind"
path = "src/main.rs"
