[package]
name = "chronomind"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "A temporal vector store for AI agent memory, with time-aware similarity search"
authors = ["JtPerez-Acle <jtperez.acle@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JtPerez-Acle/chrono-mind"
readme = "README.md"
keywords = ["vector-store", "hnsw", "temporal", "memory", "ai"]
categories = ["data-structures", "database-implementations"]

[dependencies]
crossbeam-epoch = "0.9"
papaya = "0.2"
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
# Needed by the CLI binary to surface `tracing` logs; the library itself only emits spans.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Model checker for the lock-free primitives. Only resolved when building
# with RUSTFLAGS="--cfg loom"; never part of a normal build.
[target.'cfg(loom)'.dependencies]
loom = "0.7"

[dev-dependencies]
criterion = "0.5"
# The reclamation gate drives the COW primitive directly with pinned guards.
crossbeam-epoch = "0.9"
proptest = "1.4"
tempfile = "3.8"

[[bench]]
name = "comparison"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)"] }

# Recall tests do millions of 768-dimensional distance computations;
# unoptimized test binaries make them unbearably slow.
[profile.test]
opt-level = 2

[[bin]]
name = "chronomind"
path = "src/main.rs"
