[package]
name = "chronomind"
version = "0.2.5"
edition = "2021"
rust-version = "1.82"
description = "A temporal vector store for AI agent memory, with time-aware similarity search"
authors = ["JtPerez-Acle <jtperez.acle@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JtPerez-Acle/chrono-mind"
readme = "README.md"
keywords = ["vector-store", "hnsw", "temporal", "memory", "ai"]
categories = ["data-structures", "database-implementations"]

[dependencies]
# Snapshot body integrity checksum.
crc32fast = "1.4"
crossbeam-epoch = "0.9"
papaya = "0.2"
rand = "0.8"
# Atomic snapshot writes: write to a temp file, then persist() renames over
# the destination (correct replace semantics on Windows too).
tempfile = "3.8"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
# Needed by the CLI binary to surface `tracing` logs; the library itself only emits spans.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# External ANN libraries, pulled in ONLY by the `bench-external` feature for
# the head-to-head comparison (benches/external.rs). Never part of a normal
# build of the library.
instant-distance = { version = "0.6.1", optional = true }
hnsw_rs = { version = "0.3.4", optional = true }
usearch = { version = "2.25.3", optional = true }

# Model checker for the lock-free primitives. Only resolved when building
# with RUSTFLAGS="--cfg loom"; never part of a normal build.
[target.'cfg(loom)'.dependencies]
loom = "0.7"

[dev-dependencies]
criterion = "0.5"
# The reclamation gate drives the COW primitive directly with pinned guards.
crossbeam-epoch = "0.9"
proptest = "1.4"
tempfile = "3.8"

[[bench]]
name = "comparison"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)"] }

# Recall tests do millions of 768-dimensional distance computations;
# unoptimized test binaries make them unbearably slow.
[profile.test]
opt-level = 2

[[bin]]
name = "chronomind"
path = "src/main.rs"

[features]
# Enables the external head-to-head benchmark:
#   cargo bench --bench external --features bench-external
bench-external = ["dep:instant-distance", "dep:hnsw_rs", "dep:usearch"]

[[bench]]
name = "external"
harness = false
required-features = ["bench-external"]

[[bench]]
name = "concurrency"
harness = false
required-features = ["bench-external"]
