[package]
name = "chronomind-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.chronomind]
path = ".."

# Prevent this from being a member of the parent workspace.
[workspace]
members = ["."]

[[bin]]
name = "index_ops"
path = "fuzz_targets/index_ops.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
